# Tephryte

./: .gitmodules  Application.cpp  CMakeLists.txt  Log.h  Tephryte.h  VkBackend.cpp  VkBackend.h  main.cpp  test.cpp
Tephryte/: TODO.txt
Tephryte/src/: Application.cpp  Application.h  Debug.h  Log.h  Tephryte.h  VkBackend.cpp  VkBackend.h  main.cpp
Tephryte/src/core/: Application.cpp  Application.h  Debug.h  IO.h  Log.h  Math.h  RenderEngine.cpp  RenderEngine.h  Scene.cpp  Scene.h  TephryteCore.h  VulkanImpl.cpp  VulkanImpl.h  VulkanRenderer.cpp  VulkanRenderer.h  Window.cpp  Window.h
Tephryte/src/graphics/shaders/src/: base_UI.vert
libs/glm/: CMakeLists.txt
